# resolve_dependencies

./: README.md  __main__.py  pyproject.toml
